# cyberQNX

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.cmake  qnx710_cross_compile.cmake
cyber/: cyber.cc  cyber.h  setup.bash
cyber/common/: file.cc  file.h  global_data.cc
cyber/component/: component.h  timer_component.cc
cyber/examples/: CMakeLists.txt
cyber/examples/common_component_example/: CMakeLists.txt  channel_prediction_camera_writer.cc  channel_prediction_radar_writer.cc  channel_test_camera_writer.cc  channel_test_radar_writer.cc  common_camera.dag  common_camera.launch  common_component_camera.cc  common_component_camera.h  common_component_radar.cc  common_component_radar.h  common_radar.dag  common_radar.launch
cyber/examples/timer_component_example/: CMakeLists.txt  timer.dag  timer.launch
cyber/io/: poll_data.h  poll_handler.cc  poller.cc  poller.h  session.cc
cyber/io/example/: CMakeLists.txt
cyber/mainboard/: CMakeLists.txt  module_argument.cc  module_argument.h
cyber/node/: node.cc  node.h
cyber/proto/: component_conf.proto  record.proto  scheduler_conf.proto
cyber/record/file/: record_file_writer.cc
cyber/scheduler/: processor.cc  scheduler.cc  scheduler.h
cyber/scheduler/common/: pin_thread.cc  pin_thread.h
cyber/time/: time.cc
cyber/tools/: CMakeLists.txt
cyber/tools/cyber_monitor/: main.cc
cyber/tools/cyber_recorder/: info.cc  main.cc  recorder.cc  recorder.h
cyber/tools/cyber_recorder/player/: dwcamera_deserializer.cpp  dwcamera_deserializer.h  play_task.h  play_task_consumer.cc  play_task_consumer.h  play_task_producer.cc  play_task_producer.h
cyber/transport/shm/: condition_notifier.cc  condition_notifier.h  posix_segment.cc  xsi_segment.cc  xsi_segment.h
docker/scripts/: dev_into.sh  dev_start.sh
docker/scripts/qnx/: Dockerfile  dev_into.sh  dev_start.sh  docker-compose.user.yml  docker-compose.yml
install.Linux.aarch64/include/Poco/: Types.h
install.Linux.aarch64/lib/: libPocoFoundation.so.71  libavdevice.so.58.10.100  libavfilter.so.7.85.100  libavformat.so.58.45.100  libavresample.so.4.0.0  libavutil.so.56.51.100  libfastcdr.so.1.0.7  libfastrtps.so.1.5.0  libgflags.so.2.2.2  libgflags_nothreads.so.2.2.2  libglog.so.0.0.0  libpostproc.so.55.7.100  libprotobuf-lite.so.3.12.3.0  libswresample.so.3.7.100  libswscale.so.5.7.100  libtinyxml2.so.4.0.1  libuuid.so.1.5
install.Linux.aarch64/lib/cmake/protobuf/: protobuf-targets-noconfig.cmake  protobuf-targets.cmake
install.Linux.aarch64/lib/pkgconfig/: gflags.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libglog.pc  libpostproc.pc  libswresample.pc  libswscale.pc  protobuf-lite.pc  protobuf.pc  tinyxml2.pc
install.Linux.x86_64/include/uuid/: uuid.h
install.Linux.x86_64/lib/: libPocoFoundation.so.71  libavdevice.so.58.10.100  libavfilter.so.7.85.100  libavformat.so.58.45.100  libavresample.so.4.0.0  libavutil.so.56.51.100  libfastcdr.so.1.0.7  libfastrtps.so.1.5.0  libgflags.so.2.2.2  libgflags_nothreads.so.2.2.2  libglog.so.0.0.0  libpostproc.so.55.7.100  libprotobuf-lite.so.3.12.3.0  libswresample.so.3.7.100  libswscale.so.5.7.100  libtinyxml2.so.4.0.1  libuuid.so.1  libuuid.so.1.5
install.Linux.x86_64/lib/cmake/protobuf/: protobuf-config-version.cmake
install.Linux.x86_64/lib/pkgconfig/: gflags.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libglog.pc  libpostproc.pc  libswresample.pc  libswscale.pc  protobuf-lite.pc  protobuf.pc  tinyxml2.pc
install.QNX.aarch64/: setup.rc
install.QNX.aarch64/include/fastcdr/: config.h
install.QNX.aarch64/include/fastrtps/: config.h
install.QNX.aarch64/include/glog/: logging.h
install.QNX.aarch64/lib/: libPocoFoundation.so.71  libavdevice.so.58.10.100  libavfilter.so.7.85.100  libavformat.so.58.45.100  libavutil.so.56.51.100  libfastcdr.so.1.0.7  libfastrtps.so.1.5.0  libgflags.so.2.2.2  libgflags_nothreads.so.2.2.2  libglog.so.0.0.0  libprotobuf-lite.so.23  libswresample.so.3.7.100  libswscale.so.5.7.100  libtinyxml2.so.4.0.1  libuuid.so.1.5
install.QNX.aarch64/lib/fastrtps/cmake/: fastrtpsTargets.cmake
install.QNX.aarch64/lib/pkgconfig/: gflags.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libglog.pc  libswresample.pc  libswscale.pc  protobuf-lite.pc  protobuf.pc  tinyxml2.pc
modules/: CMakeLists.txt
modules/common/shmlib/: shared_mem_buffer.h
modules/tools/visualizer/: CMakeLists.txt  main_window.cc  main_window.h  pointcloud.cc  pointcloud.h  radarpoints.h  texture.cc  texture.h
proto/: CMakeLists.txt
proto/camera/: sensor_image.proto
proto/common/: header.proto
proto/lidar/: pointcloud.proto
proto/radar/: radar.proto
scripts/: apollo.bashrc  cmake_build.sh  cmake_clean.sh  docker_start_user.sh  tune_performance.sh
